Update the table

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     Nice Chart Project
+    TEst 1 2 3
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+    </ul>
 </body>
 </html>
