--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <ul>
         <li>item 1</li>
         <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
     </ul>
 </body>
 </html>
