--- a/index.html
+++ b/index.html
@@ -1,18 +1,66 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" >
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <title>Nice Chart</title>
 </head>
+
 <body>
-    Nice Chart Project
-    TEst 1 2 3
-    <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
-    </ul>
+   
+    <header>
+        <div class="logo-container">
+            <h4 class="logo">Nice Chart</h4>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <button class="nav-link" href="#">Ensembles</button>
+                    <div class="dropdown-content">
+                        <p>7th Grade</p>
+                        <p>8th Grade</p>
+                        <p>9th Grade</p>
+                    </div>
+                </li>
+                <a class="nav-link" href="catalog.html">Catalog</a>
+                <li><button class="nav-link" href="#">About</button></li>
+                <li><button class="nav-link" href="#">Log in</button></li>
+                
+            </ul>
+        </nav>
+        <div class="cart">
+            <img src="images/cart.png" alt="cart" />
+        </div>
+    </header>
+
+    <main>
+        <section class="presentation">
+            <div class="introduction">
+                <div class="intro-text"></div>
+                <h1>Personalized and professional arrangements</h1>
+                <p>
+                    Perfect for your unique ensemble.
+                </p>
+
+                <div class="cta">
+                    <button class="cta-signup">Sign up</button>
+                    <button class="cta-how-it-works">See how it works</button>
+                </div>
+            </div>
+            <div class="cover">
+                <img src="images/sax.jpg" alt="sax"/>
+            </div>
+        </section>
+
+        
+    </main>
+
 </body>
 </html>
