--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" >
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-   
+
     <header>
         <div class="logo-container">
             <a href="index.html"><h4 class="logo">Nice Chart</h4></a>
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="catalog.html">Catalog</a>
                 <li><button class="nav-link" href="#">About</button></li>
                 <li><button class="nav-link" href="#">Log in</button></li>
-                
+
             </ul>
         </nav>
         <div class="cart">
@@ -43,25 +43,7 @@
     </header>
 
     <main>
-        <section class="presentation">
-            <div class="introduction">
-                <div class="intro-text"></div>
-                <h1>Personalized and professional arrangements</h1>
-                <p>
-                    Perfect for your unique ensemble.
-                </p>
-
-                <div class="cta">
-                    <a href="sign_up.html"><button class="cta-signup">Sign up</button></a>
-                    <button class="cta-how-it-works">See how it works</button>
-                </div>
-            </div>
-            <div class="cover">
-                <img src="images/sax.jpg" alt="sax"/>
-            </div>
-        </section>
-
-        
+ Log in
     </main>
 
 </body>
