--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </li>
                 <a class="nav-link" href="catalog.html">Catalog</a>
                 <li><button class="nav-link" href="#">About</button></li>
-                <li><button class="nav-link" href="#">Log in</button></li>
-                
+                <a class="nav-link" href="login.html">Log in</a>
+
             </ul>
         </nav>
         <div class="cart">
