--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="actions.js"></script>
     <title>Nice Chart</title>
 </head>
 
@@ -53,15 +54,14 @@
 
                 <div class="cta">
                     <a href="sign_up.html"><button class="cta-signup">Sign up</button></a>
-                    <button class="cta-how-it-works">See how it works</button>
+                    <button onclick="SeeHowItWorks()" class="cta-how-it-works">See how it works</button>
                 </div>
             </div>
             <div class="cover">
-                <img src="images/sax.jpg" alt="sax"/>
+                <img src="images/sax.jpg" alt="sax" />
             </div>
         </section>
 
-        
     </main>
 
 </body>
