--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li class="dropdown">
                         <button class="nav-link" href="ensembles.html">Ensembles</button>
                         <div class="dropdown-content">
+                            <a class="ensembles-link" href="ensembles.html">My Ensembles</a>
                             <p>7th Grade</p>
                             <p>8th Grade</p>
                             <p>9th Grade</p>
