--- a/about.html
+++ b/about.html
@@ -1,11 +1,57 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+
+    <title>Nice Chart</title>
 </head>
+
 <body>
 
+    <header>
+        <div class="logo-container">
+            <a href="index.html"><h4 class="logo">Nice Chart</h4></a>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <button class="nav-link" href="ensembles.html">Ensembles</button>
+                    <div class="dropdown-content">
+                        <a class="ensembles-link" href="ensembles.html">My Ensembles</a>
+                        <p>7th Grade</p>
+                        <p>8th Grade</p>
+                        <p>9th Grade</p>
+                    </div>
+                </li>
+                <a class="nav-link" href="catalog.html">Catalog</a>
+                <li><button class="nav-link" href="#">About</button></li>
+                <a class="nav-link" href="login.html">Log in</a>
+
+            </ul>
+        </nav>
+
+    </header>
+    <section>
+        <h1> To Do List</h1>
+        <div class="container">
+            <input id="inputField" type="number">
+            <button id="addNumberButton">Add</button>
+            <div id="output">
+
+            </div>
+        </div>
+    </section>
+
+    <script src="actions.js"></script>
 </body>
 </html>
